# a2a-communicating-agents

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  americanjewelry_live_upload_guide.html  jeri_build_handoff.html  jerri_blueprint.md  letta_bridge.py  monitor_thoughts_plan.html  pyproject.toml  report_spa.html  serve_monitor.py  simple_orchestrator_chat.py  start_a2a_system.sh  start_all.sh  start_coder_agent.sh  start_jeri_agent.sh  start_letta_bridge.sh  start_orchestrator.sh  start_tester_agent.sh  start_thought_bridge.sh  start_websocket_server.sh  status.html  stop_all.sh  stop_jeri_agent.sh  stop_letta_bridge.sh  test_chat_simple.sh  thought_bridge.py
.claude-collective/metrics/: metrics-20260514.json  metrics-20260515.json  metrics-20260520.json  metrics-20260524.json  metrics-20260525.json
.letta/: settings.local.json
agent_messaging/: a2a_collective.py  orchestrator_chat.py  rag_board_transport.py  send_agent_message.py  transport_manager.py  websocket_server.py  websocket_transport.py
coder_agent/: main.py
dashboard_agent/: main.py
hybrid_letta_agents/: =1.0.7  voice-agent-selector-debug.html  voice-agent-selector.html
hybrid_letta_agents/tests/: voice_test_logs_20251226_204246.json  voice_test_logs_20251226_205219.json  voice_test_logs_20251227_173209.json  voice_test_logs_20251227_174048.json  voice_test_logs_20251227_174539.json  (+7 more)
jeri_agent/: agent.json  package-lock.json  package.json
orchestrator_agent/: AGENTS.md  a2a_dispatcher.py  main.py  remote_logger.py
tester_agent/: main.py
tests/: test_orchestrator_scissari_bridge.py
(+19 files in other folders)
