[project]
name = "a2a-communicating-agents"
version = "0.1.0"
description = "Agent-to-agent communication system"
requires-python = ">=3.10"
dependencies = [
    # LLM providers
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    # RAG / vector store
    "chromadb>=1.0.20",
    "sentence-transformers>=5.1.0",
    # Messaging & transports
    "websockets>=12.0",
    # Core utilities
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    # Optional: Letta transport (install separately if needed)
    # "letta",
    # "letta-client",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
